--- a/MyBudget/App.xaml
+++ b/MyBudget/App.xaml
@@ -2,10 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MyBudget"
+             xmlns:conv="clr-namespace:MyBudget.Converter"
              StartupUri="View/ExpenseListView.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <local:ViewModelLocator x:Key="mainViewModelLocator"/>
+            <conv:PriceConverter x:Key="priceConverter"/>
+            <conv:CountryFlagConverter x:Key="countryFlagConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
