--- a/MyBudget/View/ExpenseListView.xaml
+++ b/MyBudget/View/ExpenseListView.xaml
@@ -1,10 +1,11 @@
-﻿<Window x:Class="MyBudget.View.ExpenseListView"
+﻿<Controls:MetroWindow x:Class="MyBudget.View.ExpenseListView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MyBudget.View"
         xmlns:conv="clr-namespace:MyBudget.Converter"
+        xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
         Title="ExpenseListView" Height="450" Width="800"
         DataContext="{Binding Source={StaticResource mainViewModelLocator}, Path=ExpenseListViewModel}">
@@ -65,4 +66,4 @@
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
-</Window>
+</Controls:MetroWindow>
