--- a/MyBudget/View/ExpenseListView.xaml
+++ b/MyBudget/View/ExpenseListView.xaml
@@ -23,21 +23,25 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="5*"/>
+                <ColumnDefinition Width="3*"/>
             </Grid.ColumnDefinitions>
             <Label Grid.Column="0" Content="ProductName:" HorizontalAlignment="Right" Margin="0,0,5,0"/>
             <TextBox Grid.Column="1" Margin="5" Text="{Binding SearchInput, UpdateSourceTrigger=PropertyChanged}"/>
+            <Button Grid.Column="2" Margin="40,5" Content="Clear" Command="{Binding ClearFilterCommand}"/>
         </Grid>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="5*"/>
+                <ColumnDefinition Width="3*"/>
             </Grid.ColumnDefinitions>
             <Label Grid.Column="0" Content="ProductType" HorizontalAlignment="Right" Margin="0,0,5,0"/>
             <ComboBox Grid.Column="1" Margin="5"
                       ItemsSource="{Binding ExpenseTypes, Mode=OneWay}" 
                       SelectedValue="{Binding SelectedExpenseType}"/>
+            <Button Grid.Column="2" Margin="40,5" Content="Clear" Command="{Binding ClearTypeFilterCommand}"/>
         </Grid>
-        <DataGrid Grid.Row="3" ItemsSource="{Binding Expenses}" AutoGenerateColumns="False" IsReadOnly="True" RowHeight="20">
+        <DataGrid Grid.Row="2" ItemsSource="{Binding Expenses}" AutoGenerateColumns="False" IsReadOnly="True" RowHeight="20">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Id" Binding="{Binding Id}" Width="Auto"/>
                 <DataGridTextColumn Header="DateTime" Binding="{Binding ExpenseDateTime}" Width="*"/>
@@ -46,6 +50,18 @@
                     <!--Binding="{Binding Price, Converter={StaticResource priceConverter}, ConverterParameter={}"-->
                     <DataGridTextColumn.Binding>
                         <MultiBinding Converter="{StaticResource priceConverter}">
+                            <MultiBinding.Bindings>
+                                <Binding Path="Price"/>
+                                <Binding Path="Country"/>
+                            </MultiBinding.Bindings>
+                        </MultiBinding>
+                    </DataGridTextColumn.Binding>
+                </DataGridTextColumn>
+
+                <DataGridTextColumn Header="Price in PLN" Width="*">
+                    <!--Binding="{Binding Price, Converter={StaticResource priceConverter}, ConverterParameter={}"-->
+                    <DataGridTextColumn.Binding>
+                        <MultiBinding Converter="{StaticResource pricePLNConverter}">
                             <MultiBinding.Bindings>
                                 <Binding Path="Price"/>
                                 <Binding Path="Country"/>
@@ -65,5 +81,13 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
+        <Grid Grid.Row="3">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Column="0" Content="Total sum:" HorizontalAlignment="Right" Margin="5"/>
+            <Label Grid.Column="1" Content="{Binding Sum}" HorizontalAlignment="Left" Margin="5"/>
+        </Grid>
     </Grid>
 </Controls:MetroWindow>
