--- a/MyBudget/App.xaml
+++ b/MyBudget/App.xaml
@@ -10,6 +10,7 @@
             <conv:PriceConverter x:Key="priceConverter"/>
             <conv:CountryFlagConverter x:Key="countryFlagConverter"/>
             <conv:PriceToPLNConverter x:Key="pricePLNConverter"/>
+            <conv:ColorConverter x:Key="colorConverter"/>
             <ResourceDictionary.MergedDictionaries>
                 <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
