--- a/MyBudget/App.xaml
+++ b/MyBudget/App.xaml
@@ -11,6 +11,7 @@
             <conv:CountryFlagConverter x:Key="countryFlagConverter"/>
             <conv:PriceToPLNConverter x:Key="pricePLNConverter"/>
             <conv:ColorConverter x:Key="colorConverter"/>
+            <conv:RowToIndexConverter x:Key="rowToIndexConverter"/>
             <ResourceDictionary.MergedDictionaries>
                 <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
